# service/src/main/java/com/dominikcebula/todo/service/adapter/in/rest/TodoItemsController.java
@@ -3,6 +3,7 @@ package com.dominikcebula.todo.service.adapter.in.rest;
 import com.dominikcebula.todo.service.api.TodosApi;
 import com.dominikcebula.todo.service.application.domain.model.TodoItem;
 import com.dominikcebula.todo.service.application.port.in.*;
+import com.dominikcebula.todo.service.application.port.in.CreateOrUpdateTodoItemUseCase.CreateOrUpdateTodoItemUseCaseResult;
 import com.dominikcebula.todo.service.application.port.in.DeleteTodoItemUseCase.DeleteTodoItemUseCaseResult;
 import com.dominikcebula.todo.service.model.TodoItemDto;
 import lombok.RequiredArgsConstructor;
@@ -13,12 +14,14 @@ import java.net.URI;
 import java.util.List;
 import java.util.UUID;
 
+import static com.dominikcebula.todo.service.application.port.in.CreateOrUpdateTodoItemUseCase.CreateOrUpdateTodoItemResultType.ITEM_CREATED;
 import static com.dominikcebula.todo.service.application.port.in.DeleteTodoItemUseCase.DeleteTodoItemUseCaseResult.ITEM_DELETED;
 
 @RequiredArgsConstructor
 @RestController
 public class TodoItemsController implements TodosApi {
     private final CreateTodoItemUseCase createTodoItemUseCase;
+    private final CreateOrUpdateTodoItemUseCase createOrUpdateTodoItemUseCase;
     private final GetAllTodoItemsUseCase getAllTodoItemsUseCase;
     private final GetTodoItemByIdUseCase getTodoItemByIdUseCase;
     private final DeleteTodoItemUseCase deleteTodoItemUseCase;
@@ -32,8 +35,7 @@ public class TodoItemsController implements TodosApi {
 
         TodoItemDto createdTodoItemDto = todoItemsMapper.mapTodoItemModelToDto(createdTodoItem);
 
-        return ResponseEntity.created(URI.create("/todos/" + createdTodoItemDto.getId()))
-                .body(createdTodoItemDto);
+        return getCreatedItemResponse(createdTodoItemDto);
     }
 
     @Override
@@ -59,18 +61,37 @@ public class TodoItemsController implements TodosApi {
     }
 
     @Override
-    public ResponseEntity<TodoItemDto> updateTodoItemById(UUID todoId, TodoItemDto todoItemDto) {
-        return TodosApi.super.updateTodoItemById(todoId, todoItemDto);
+    public ResponseEntity<TodoItemDto> updateTodoItemById(UUID id, TodoItemDto todoItemDto) {
+        var command = new CreateOrUpdateTodoItemCommand(id, todoItemDto.getName(), todoItemDto.getCompleted());
+
+        CreateOrUpdateTodoItemUseCaseResult createOrUpdateResult = createOrUpdateTodoItemUseCase.createOrUpdateTodoItem(command);
+
+        TodoItemDto createdTodoItemDto = todoItemsMapper.mapTodoItemModelToDto(createOrUpdateResult.todoItem());
+
+        if (createOrUpdateResult.resultType() == ITEM_CREATED) {
+            return getCreatedItemResponse(createdTodoItemDto);
+        } else {
+            return getUpdatedItemResponse(createdTodoItemDto);
+        }
     }
 
     @Override
-    public ResponseEntity<Void> deleteTodoItemById(UUID todoId) {
-        DeleteTodoItemUseCaseResult deletionResult = deleteTodoItemUseCase.deleteTodoItem(todoId);
+    public ResponseEntity<Void> deleteTodoItemById(UUID id) {
+        DeleteTodoItemUseCaseResult deletionResult = deleteTodoItemUseCase.deleteTodoItem(id);
 
         if (deletionResult == ITEM_DELETED) {
             return ResponseEntity.noContent().build();
         } else {
             return ResponseEntity.notFound().build();
         }
+    }
+
+    private ResponseEntity<TodoItemDto> getCreatedItemResponse(TodoItemDto createdTodoItemDto) {
+        return ResponseEntity.created(URI.create("/todos/" + createdTodoItemDto.getId()))
+                .body(createdTodoItemDto);
+    }
+
+    private ResponseEntity<TodoItemDto> getUpdatedItemResponse(TodoItemDto createdTodoItemDto) {
+        return ResponseEntity.ok(createdTodoItemDto);
     }
 }
